// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons in RTL renders Customization 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          class="text-moon-24 text-chichi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <svg
          class="text-moon-24 text-trunks"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <svg
          class="text-moon-32 text-roshi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <svg
          class="text-moon-32 text-piccolo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <svg
          class="text-moon-48 text-raditz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <svg
          class="text-moon-48 text-whis"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        class="text-moon-24 text-chichi"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-24 text-trunks"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-32 text-roshi"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-32 text-piccolo"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-48 text-raditz"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-48 text-whis"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icons in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
            stroke="black"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icons renders Customization 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        class="text-moon-24 text-chichi"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-24 text-trunks"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-32 text-roshi"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-32 text-piccolo"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-48 text-raditz"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <svg
        class="text-moon-48 text-whis"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      class="text-moon-24 text-chichi"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <svg
      class="text-moon-24 text-trunks"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <svg
      class="text-moon-32 text-roshi"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <svg
      class="text-moon-32 text-piccolo"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <svg
      class="text-moon-48 text-raditz"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <svg
      class="text-moon-48 text-whis"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icons renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
          stroke="black"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.1923 10.1538H21.8462C22.9507 10.1538 23.8462 11.0492 23.8462 12.1538L23.8462 23.5C23.8462 24.6045 22.9507 25.5 21.8462 25.5H14.1539C13.0493 25.5 12.1539 24.6045 12.1539 23.5V21.8461M13.6154 7.23071V11.6153H9.23077M8.5 10.6853L12.6267 6.5H18.1923C19.2969 6.5 20.1923 7.39543 20.1923 8.5L20.1923 19.8462C20.1923 20.9507 19.2969 21.8462 18.1923 21.8462H10.5C9.39543 21.8462 8.5 20.9507 8.5 19.8462V10.6853Z"
        stroke="black"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
